# inf-502-final-project

./: .coveragerc  .env.example  .gitignore  README.md  makefile  pyproject.toml
app/: containers.py  main.py
app/adapters/: __init__.py
app/adapters/gateways/: __init__.py  github_gateway.py  repo_gateway_selector.py
app/adapters/storage/: __init__.py  pickle_storage.py
app/domain/: __init__.py  base.py  dto.py  enums.py
app/domain/entities/: __init__.py  repo.py
app/domain/ports/: __init__.py  repo_port.py  storage_port.py
app/infrastructure/config/: settings.py
app/infrastructure/schemas/: __init__.py  base.py  repo_info_schema.py
app/infrastructure/web/: __init__.py  main.py
app/shared/: types.py
app/use_cases/: __init__.py  get_repo_info_by_id.py  get_repo_info_by_source.py  get_repo_summary.py  get_repo_timeseries.py
app/use_cases/ports/: __init__.py  repo_port.py
docs/: 01-title.md  02-overview.md  03-use-case.md  04-architecture.md  05-data-collection.md  06-rate-limits.md  07-storage-caching.md  08-data-processing.md  09-analysis.md  10-viz-summary.md  11-viz-timeseries.md  12-insights.md  13-testing.md  14-conclusion.md  README.md
tests/: conftest.py
tests/adapters/gateways/: test_github_gateway.py  test_repo_gateway_selector.py
tests/fixtures/: __init__.py  common.py  dto_factories.py  entity_factories.py  schema_factories.py
tests/infrastructure/: test_container.py
tests/mocks/: __init__.py  gateway_mocks.py  storage_mocks.py  use_case_mocks.py
tests/unit/domain/: test_base.py  (+3 more)
tests/use_cases/: test_get_repo_summary.py
(+23 files in other folders)
